--- a/index.html
+++ b/index.html
@@ -3,33 +3,47 @@
     <head>
         <meta charset="utf-8">
         <title>Keitaro Nakasai</title>
+        <link rel="stylesheet" type="text/css" href="top.css">
     </head>
     <body>
-        <h1>
-            Keitaro Nakasai
-        </h1>
-        <img src="picture/nakasai_keitaro.png"/>
-        <p>
-    	PhD student at Nara Institute of Science and Technology (NAIST) from April 2018.
-        I received the B.E. degree (2016) from Kindai University, Japan.
-        And I will receive the M.E degree (March 2018) from Nara Institute of Science and Technology. 
-        </p>
-        <p>
-        Software Engineering Laboratory, Graduate School of Science and Technology Nara Institute of Science and Technology. 8916-5 Takayama, Ikoma, Nara 630-0192, Japan
-        </p>
-        <p>
-        Email: nakasai.keitaro.nc8 <u>at</u> is.naist.jp
-        </p>
-        </h2>
-            Publications
-        </h2>
-        <ol>
-            <li>
-        	    <u>Keitaro Nakasai</u>, Hideaki Hata, Saya Onoue, and Kenichi Matsumoto, ``Analysis of Donations in the Eclipse Project,'' In Proc. of 8th IEEE International Workshop on Empirical Software Engineering in Practice (IWESEP 2017), pages 18-22 March 2017.
-            </li>
-            <li>
-        	    <u>Keitaro Nakasai</u>, Masateru Tsunoda, and Hideaki Hata, ``Web Search Behaviors for Software Development,'' In Proc. of 9th International Workshop on Cooperative and Human Aspects of Software Engineering (CHASE 2016), pages 125-128 May 2016.
-            </li>
-        </ol>
+        <header>
+            <h1>
+                Keitaro Nakasai
+            </h1>
+        </header>
+        <div class="introduce">
+            <img src="picture/nakasai_keitaro.png" width="250px"/>
+            <p>
+    	    PhD student at Nara Institute of Science and Technology (NAIST) from April 2018.
+            I received the B.E. degree (2016) from Kindai University, Japan.
+            And I will receive the M.E degree (March 2018) from Nara Institute of Science and Technology. 
+            </p>
+        </div>
+        <div class="address">
+            <p>
+            Software Engineering Laboratory, Graduate School of Science and Technology Nara Institute of Science and Technology. 8916-5 Takayama, Ikoma, Nara 630-0192, Japan
+            </p>
+            <p>
+            Email: nakasai.keitaro.nc8 <u>at</u> is.naist.jp
+            </p>
+        </div>
+        <div class="pablications">
+            <h2>
+                Publications
+            </h2>
+            <div class="international">
+                <h3>
+                    International Conference
+                </h3>
+                <ol>
+                    <li>
+        	            <u>Keitaro Nakasai</u>, Hideaki Hata, Saya Onoue, and Kenichi Matsumoto, ``Analysis of Donations in the Eclipse Project,'' In Proc. of 8th IEEE International Workshop on Empirical Software Engineering in Practice (IWESEP 2017), pages 18-22 March 2017.
+                    </li>
+                    <li>
+        	            <u>Keitaro Nakasai</u>, Masateru Tsunoda, and Hideaki Hata, ``Web Search Behaviors for Software Development,'' In Proc. of 9th International Workshop on Cooperative and Human Aspects of Software Engineering (CHASE 2016), pages 125-128 May 2016.
+                    </li>
+                </ol>
+            </div>
+        </div>
     </body>
 </html>
