軽微な修正

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <p>
     	    PhD student at Nara Institute of Science and Technology (NAIST) from April 2018.
             I received the B.E. degree (2016) from Kindai University, Japan.
-            And I will receive the M.E degree (March 2018) from Nara Institute of Science and Technology. 
+            And I will receive the M.E degree (March 2018) from Nara Institute of Science and Technology, Japan. 
             </p>
         </div>
         <div class="address">
             <p>
-            Software Engineering Laboratory, Graduate School of Science and Technology Nara Institute of Science and Technology. 8916-5 Takayama, Ikoma, Nara 630-0192, Japan
+            Software Engineering Laboratory, Graduate School of Science and Technology, Nara Institute of Science and Technology. 8916-5 Takayama, Ikoma, Nara 630-0192, Japan
             </p>
             <p>
             Email: nakasai.keitaro.nc8 <u>at</u> is.naist.jp
