--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>
     	    PhD student at Nara Institute of Science and Technology (NAIST) from April 2018.
             I received the B.E. degree (2016) from Kindai University, Japan.
-            And I will receive the M.E degree (March 2018) from Nara Institute of Science and Technology, Japan. 
+            And I received the M.E degree (March 2018) from Nara Institute of Science and Technology, Japan. 
             </p>
         </div>
         <div class="address">
